numpy image example

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "aac4fa18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -118,8 +119,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26bd9356",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.70980394, 0.80784315, 0.88235295, 1.        ],\n",
+       "        [0.72156864, 0.8117647 , 0.8862745 , 1.        ],\n",
+       "        [0.7411765 , 0.8156863 , 0.8862745 , 1.        ],\n",
+       "        ...,\n",
+       "        [0.49803922, 0.6862745 , 0.8392157 , 1.        ],\n",
+       "        [0.49411765, 0.68235296, 0.8392157 , 1.        ],\n",
+       "        [0.49411765, 0.68235296, 0.8352941 , 1.        ]],\n",
+       "\n",
+       "       [[0.69411767, 0.8039216 , 0.8862745 , 1.        ],\n",
+       "        [0.7019608 , 0.8039216 , 0.88235295, 1.        ],\n",
+       "        [0.7058824 , 0.80784315, 0.88235295, 1.        ],\n",
+       "        ...,\n",
+       "        [0.5019608 , 0.6862745 , 0.84705883, 1.        ],\n",
+       "        [0.49411765, 0.68235296, 0.84313726, 1.        ],\n",
+       "        [0.49411765, 0.68235296, 0.8392157 , 1.        ]],\n",
+       "\n",
+       "       [[0.6901961 , 0.8       , 0.88235295, 1.        ],\n",
+       "        [0.69803923, 0.8039216 , 0.88235295, 1.        ],\n",
+       "        [0.7058824 , 0.80784315, 0.88235295, 1.        ],\n",
+       "        ...,\n",
+       "        [0.5019608 , 0.6862745 , 0.84705883, 1.        ],\n",
+       "        [0.49803922, 0.6862745 , 0.84313726, 1.        ],\n",
+       "        [0.49803922, 0.6862745 , 0.84313726, 1.        ]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0.9098039 , 0.81960785, 0.654902  , 1.        ],\n",
+       "        [0.8352941 , 0.7490196 , 0.6509804 , 1.        ],\n",
+       "        [0.72156864, 0.6313726 , 0.5372549 , 1.        ],\n",
+       "        ...,\n",
+       "        [0.01568628, 0.07058824, 0.02352941, 1.        ],\n",
+       "        [0.03921569, 0.09411765, 0.03529412, 1.        ],\n",
+       "        [0.03921569, 0.09019608, 0.05490196, 1.        ]],\n",
+       "\n",
+       "       [[0.9137255 , 0.83137256, 0.6784314 , 1.        ],\n",
+       "        [0.8117647 , 0.7294118 , 0.627451  , 1.        ],\n",
+       "        [0.65882355, 0.5686275 , 0.47843137, 1.        ],\n",
+       "        ...,\n",
+       "        [0.00392157, 0.05490196, 0.03529412, 1.        ],\n",
+       "        [0.03137255, 0.09019608, 0.05490196, 1.        ],\n",
+       "        [0.04705882, 0.10588235, 0.06666667, 1.        ]],\n",
+       "\n",
+       "       [[0.9137255 , 0.83137256, 0.68235296, 1.        ],\n",
+       "        [0.76862746, 0.68235296, 0.5882353 , 1.        ],\n",
+       "        [0.59607846, 0.5058824 , 0.44313726, 1.        ],\n",
+       "        ...,\n",
+       "        [0.03921569, 0.10196079, 0.07058824, 1.        ],\n",
+       "        [0.02745098, 0.08235294, 0.05882353, 1.        ],\n",
+       "        [0.05098039, 0.11372549, 0.07058824, 1.        ]]],\n",
+       "      shape=(432, 575, 4), dtype=float32)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import Image\n",
+    "from matplotlib.image import imread\n",
+    "dog = imread('images/dog-photo-1.jpeg')\n",
+    "dog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "52f2974d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(dog)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "34b99b0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((432, 575, 4), 3)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dog.shape, dog.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5b5289be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Almond butter</th>\n",
+       "      <th>Peanut butter</th>\n",
+       "      <th>Cashew butter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mon</th>\n",
+       "      <td>12</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tues</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wed</th>\n",
+       "      <td>9</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thurs</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fri</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Almond butter  Peanut butter  Cashew butter\n",
+       "Mon               12             15              0\n",
+       "Tues               3              3              7\n",
+       "Wed                9             19             18\n",
+       "Thurs              4              6             12\n",
+       "Fri                1              6              7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "sales_amounts = np.random.randint(20, size=(5, 3))\n",
+    "\n",
+    "weekly_sales = pd.DataFrame(sales_amounts,\n",
+    "                            index=[\"Mon\", \"Tues\", \"Wed\", \"Thurs\", \"Fri\"],\n",
+    "                            columns=[\"Almond butter\", \"Peanut butter\", \"Cashew butter\"])\n",
+    "\n",
+    "weekly_sales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e631645",
    "metadata": {},
    "outputs": [],
    "source": []
